⚙️ fix: Contraste e cadastrar

--- a/src/css/contraste.css
+++ b/src/css/contraste.css
@@ -121,11 +121,14 @@ code {
 /* --------------------------------------------------------------------------------------------------------------------------------------------------- */
 /* Cadastro */
 .section__form{
-    background-color: #fff;
+    background-color: #000;
+    color: #fff;
     border: 1px solid white;
     box-shadow: 1px 2px 5px #fff;
 }
-
+#cadastro__section{
+    background-color: #000;
+}
 /* --------------------------------------------------------------------------------------------------------------------------------------------------- */
 
 /* LOGIN */
