--- a/src/css/style__cadastrar.css
+++ b/src/css/style__cadastrar.css
@@ -1,7 +1,8 @@
 /* Tag gerals */
 #cadastro {
     width: 100%;
-    height: 100vh;
+    height: calc(100vh - 113px); 
+    /*Para que a tela não fique com a barra lateral eu estou tirando todos os pixel de elementos fixados (header + footer)*/
     font-size: 1em;
     display: flex;
 }
@@ -9,25 +10,26 @@
     z-index: 999;
 }
 aside {
-    height: 100vh;
+    height: calc(100vh - 91px);
     display: flex;
     border-right: #00a1ff 1px solid;
 }
 
 aside img{
     width: 50vw;
-    height: 100vh;
+    height: 100%;
 }
 #cadastro__section {
     width: 100%;
-    height: calc(100% - 63px);
+    height: calc(100% - 91px);
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
+    /* justify-content: flex-end; */
     align-items: center;
     position: relative;
     margin-top: 0;
     background-color: #fff;
-    padding-right: 2%;
+    /* padding-right: 2%; */
 }
 #cadastro__section div img {
     width: 400px;
@@ -35,11 +37,13 @@ aside img{
 
 /* Formulario */
 .section__form {
-    width: 40%;
+    width: 100%;
     height: max-content;
     border: 1px solid black;
     box-shadow: 1px 2px 5px #00000070;
     padding: 30px;
+    position: relative;
+    margin: 0px 10%;
 }
 
 .section__title {
@@ -65,7 +69,7 @@ aside img{
 
 .form__group .group__text label::before,
 .about__radios p::before {
-    content: "*";
+    content: "* ";
     color: #00a1ff;
 }
 
@@ -152,8 +156,9 @@ label[for="termos"],
 /* Três botões */
 .section__radio {
     position: absolute;
-    top: 90%;
-    margin-left: 20%;
+    bottom: 10%;
+    left: 50%;
+    transform: translateY(-50%) translateX(-50%);
 }
 
 .radio__group {
@@ -245,6 +250,9 @@ input[type="checkbox"] {
     #cadastro__section div img {
         width: 300px;
     }
+    .form__group{
+        font-size: 14px;
+    }
 }
 
 @media only screen and (max-width: 1110px) {
@@ -257,7 +265,7 @@ input[type="checkbox"] {
     }
 }
 
-@media only screen and (max-width: 1050px) {
+@media only screen and (max-width: 1140px) {
     aside{
         display: none;
     }
@@ -341,14 +349,23 @@ input[type="checkbox"] {
     }
 
 }
-@media screen and (max-height:700px) {
-    #cadastro__section{
-        height: 97vh;
-    }
-}
+
+
+
 
 @media screen and (max-height:880px) {
     .section__form {
         height: max-content;
+    }
+    .section__radio{
+        bottom: 0%;
+    }
+}
+
+
+
+@media screen and (max-height:700px) {
+    #cadastro__section{
+        height: 97vh;
     }
 }
